# gtranslate-app

./: .gitattributes  .gitignore  CONVENTIONS.md  README.md  TODOS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pr.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: app.yaml
plugins/tauri-plugin-translator-bindings/: Cargo.toml  build.rs  package.json
plugins/tauri-plugin-translator-bindings/examples/tauri-app/: package.json
plugins/tauri-plugin-translator-bindings/examples/tauri-app/src-tauri/src/: lib.rs
plugins/tauri-plugin-translator-bindings/permissions/: default.toml
plugins/tauri-plugin-translator-bindings/src/: commands.rs  lib.rs  mobile.rs  models.rs
public/: failures.html  languages.json
src/: app.css  failures.html  input.css  main.ts  updater.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/assets/: app-conf.json  languages.json
tauri-plugin-translator-bindings/: Cargo.toml  README.md
tauri-plugin-translator-bindings/examples/tauri-app/src/: App.svelte
tauri-plugin-translator-bindings/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-translator-bindings/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-translator-bindings/guest-js/: index.ts
tauri-plugin-translator-bindings/permissions/: translations.toml
tauri-plugin-translator-bindings/permissions/autogenerated/: reference.md
tauri-plugin-translator-bindings/permissions/schemas/: schema.json
tauri-plugin-translator-bindings/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
