[package]
name = "gtranslate-app"
version = "0.2.4"
description = "A Tauri App"
authors = ["z3ntl3"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gtranslate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.3.1", features = ['tray-icon'] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-translator-bindings = { version = "0.1.0", path = "../plugins/tauri-plugin-translator-bindings" }
tokio = { version = "1.43.0", features = ["fs"] }
thiserror = "2.0.12"
tracing-subscriber = {version = "0.3.19", features = ["chrono", "json"] }
tracing = "0.1"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-updater = "2"
